# adventofcode-2021-python

./: pyproject.toml
.github/workflows/: tests.yml
