[tool.poetry]
name = "aoc-python"
version = "0.0.0"
description = "Avent of Code 2021 - Python"
authors = ["Erik van der Goetz <erik.vandergoetz@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/Erik-vdg/aoc2021-python"
repository = "https://github.com/Erik-vdg/aoc2021-python"
documentation = "https://aoc2021-python.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/Erik-vdg/aoc2021-python/releases"

[tool.poetry.dependencies]
python = "^3.7.12"
click = "^8.0.3"
advent-of-code-data = "^1.1.1"
PyYAML = "^6.0"
typing-extensions = "^4.0.1"


[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
coverage = {extras = ["toml"], version = "^6.2"}
safety = "^1.9.0"
mypy = "^0.931"
typeguard = "^2.9.1"
sphinx = "^4.3.2"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.8.2"
flake8 = "^4.0.1"
black = "^21.12b0"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.11.29"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.2.5"
pep8-naming = "^0.12.1"
darglint = "^1.5.5"
reorder-python-imports = "^2.3.6"
pre-commit-hooks = "^4.1.0"
sphinx-rtd-theme = "^1.0.0"
sphinx-click = "^3.0.2"
Pygments = "^2.11.1"
types-PyYAML = "^6.0.10"

[tool.poetry.scripts]
aoc-python = "aoc_python.__main__:main" ## TODO replace this with a helper util to create files

[tool.poetry.plugins."adventofcode.user"]
Erik-vdg = "aoc_python.util:mysolve"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["aoc_python"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
